dialogs overflow fixed

--- a/onlineedu/src/main/webapp/resources/styles/styles.css
+++ b/onlineedu/src/main/webapp/resources/styles/styles.css
@@ -10,6 +10,8 @@ body {
 #page-wrapper {
     position: relative;
     min-height: 100vh;
+    display: flex;
+    flex-direction: column;
 }
 
 /* Style the header */
@@ -133,6 +135,7 @@ li:hover:not(.active) {
     flex-wrap: nowrap;
     border-top: 2px solid #333333;
     border-bottom: 2px solid #b1b1b1;
+    flex-grow: 1;
 }
 
 main {
